--- a/Html/styles.css
+++ b/Html/styles.css
@@ -12,7 +12,8 @@ body {
     display: flex;
     gap: 20px;
     width: 100%;
-    max-width: 1000px;
+    max-width: 1200px;
+    height: 100vh;
 }
 
 .calculator {
@@ -22,6 +23,7 @@ body {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     max-width: 400px;
     width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
 }
@@ -31,6 +33,7 @@ body {
     border-radius: 10px;
     padding: 10px;
     margin-bottom: 20px;
+    position: relative;
 }
 
 .display input {
@@ -82,15 +85,18 @@ body {
 
 .input-fields {
     margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .input-fields label {
     color: #ffffff;
-    margin-right: 10px;
+    margin-right: 5px;
 }
 
 .input-fields input {
-    margin-right: 20px;
+    width: 60px;
     padding: 5px;
     font-size: 1rem;
     border: 1px solid #333;
@@ -105,6 +111,8 @@ body {
     border-radius: 20px;
     padding: 20px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    aspect-ratio: 1 / 1;
+    max-height: 100%;
 }
 
 #graph-canvas {
